[put-fix-btn-on-mobile] Fix btn sandbox on mobile

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -540,8 +540,16 @@ li code {
   font-weight: 700;
 }
 
-.menu__list div.menu__list-item:last-child {
+/* .menu__list .menu__list-item:last-child {
   display: none;
+} */
+
+.menu__list .menu__list-item:last-child {
+  margin: 1.33rem 0.88rem 0;
+}
+
+.menu__list .menu__list-item:last-child .button {
+  width: 100%;
 }
 
 /* Sidebar mobile */
@@ -1673,7 +1681,6 @@ h1, h2, h3, h4:not(.docs-doc-id-API\/api-reference) {
 
 /* Buttons */
 .button {
-  display: flex;
   align-items: center;
   justify-content: center !important;
 
